<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
    >

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@color/mine_text_color"
        android:textSize="@dimen/sp14"
        />

    <TextView
        android:id="@+id/send_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:enabled="false"
        android:padding="16dp"
        android:text="@string/send"
        android:textColor="@color/comment_send_selector"
        android:textSize="@dimen/sp14"
        />

    <EditText
        android:id="@+id/pop_comment_tv"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/send_tv"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:gravity="start"
        android:hint="@string/tip_comment"
        android:lineSpacingExtra="12dp"
        android:maxLength="60"
        android:textColor="@color/edit_text_color"
        android:textColorHint="@color/edit_text_hint_color"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/sp14"
        />

</RelativeLayout>
