<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/include_head_item" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:background="@color/gray_f7f7f7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp176"
                android:background="@color/white">

                <LinearLayout
                    android:id="@+id/ll_choice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp16"
                        android:layout_marginTop="@dimen/dp8"
                        android:text="@string/select_upload_mode"
                        android:textStyle="bold"
                        android:textColor="@color/gray_424242"
                        android:textSize="@dimen/sp18" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp15"
                        android:layout_marginTop="@dimen/dp32">

                        <ImageView
                            android:id="@+id/iv_face"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/face_collected_upload" />

                        <ImageView
                            android:id="@+id/iv_take_photo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/photo_upload" />

                        <ImageView
                            android:id="@+id/iv_photos"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/album_upload" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rl_pic"
                    android:layout_width="@dimen/dp160"
                    android:layout_height="@dimen/dp160"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_pic"
                        android:layout_width="@dimen/dp160"
                        android:layout_height="@dimen/dp160"
                        android:background="@drawable/shape_rect"
                         />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp24"
                        android:layout_alignParentBottom="true"
                        android:background="@color/transparent20"
                        android:gravity="center"
                        android:text="点击图片修改"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp12" />
                </RelativeLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:background="@color/white"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_mission_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:paddingRight="@dimen/dp16"
                    android:layout_marginTop="@dimen/dp8"
                    android:drawableRight="@drawable/arrow_down"
                    android:paddingBottom="@dimen/dp8"
                    android:paddingTop="@dimen/dp8"
                    android:text="@string/mission_detail"
                    android:textStyle="bold"
                    android:textColor="@color/gray_424242"
                    android:textSize="@dimen/sp18" />

                <LinearLayout
                    android:id="@+id/ll_fold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp16"
                    android:layout_marginBottom="@dimen/dp10"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@string/mission_name_"
                            android:textColor="@color/gray_424242"
                            android:textSize="@dimen/sp14" />

                        <EditText
                            android:id="@+id/et_mission_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp10"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawableRight="@drawable/grey_arrow"
                            android:ellipsize="end"
                            android:gravity="right|center_vertical"
                            android:hint="@string/input_mission_name_hint"
                            android:singleLine="true"
                            android:textColor="@color/gray_212121"
                            android:textColorHint="@color/gray_9e9e9e"
                            android:textSize="@dimen/sp12" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@string/threshold_"
                            android:textColor="@color/gray_424242"
                            android:textSize="@dimen/sp14" />

                        <TextView
                            android:id="@+id/tv_threshold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp10"
                            android:background="@null"
                            android:text="85"
                            android:drawableRight="@drawable/grey_arrow"
                            android:ellipsize="end"
                            android:textStyle="bold"
                            android:gravity="right|center_vertical"
                            android:hint="@string/input_threshold_hint"
                            android:maxLines="1"
                            android:textColor="@color/gray_212121"
                            android:textColorHint="@color/gray_9e9e9e"
                            android:textSize="@dimen/sp12" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@string/start_time_"
                            android:textColor="@color/gray_424242"
                            android:textSize="@dimen/sp14" />

                        <TextView
                            android:id="@+id/tv_start_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dp10"
                            android:layout_marginTop="@dimen/dp10"
                            android:drawableRight="@drawable/grey_arrow"
                            android:ellipsize="end"
                            android:gravity="right|center_vertical"
                            android:maxLines="1"
                            android:hint="@string/input_start_time_hint"
                            android:textColor="@color/gray_212121"
                            android:textSize="@dimen/sp12"
                             />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:text="@string/end_time_"
                            android:textColor="@color/gray_424242"
                            android:textSize="@dimen/sp14" />

                        <TextView
                            android:id="@+id/tv_end_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp10"
                            android:drawableRight="@drawable/grey_arrow"
                            android:ellipsize="end"
                            android:gravity="right|center_vertical"
                            android:maxLines="1"
                            android:textColor="@color/gray_212121"
                            android:textSize="@dimen/sp12"
                            android:hint="@string/input_end_time_hint"
                             />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dp4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp16"
                    android:paddingBottom="@dimen/dp7"
                    android:paddingTop="@dimen/dp16"
                    android:text="@string/mission_remark"
                    android:textStyle="bold"
                    android:textColor="@color/gray_424242"
                    android:textSize="@dimen/sp18" />

                <EditText
                    android:id="@+id/et_mission_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp16"
                    android:layout_marginRight="@dimen/dp16"
                    android:background="@null"
                    android:gravity="start"
                    android:paddingTop="@dimen/dp7"
                    android:hint="@string/deploy_mission_remark_hint"
                    android:minLines="5"
                    android:textColor="@color/gray_424242"
                    android:textColorHint="@color/gray_9e9e9e"
                    android:textSize="@dimen/sp12" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/yellow_ffa000"
        android:gravity="center"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16" />
</LinearLayout>